src/objects/Campaign_Report_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Report_Header__c</fullName>
        <label>Campaign Report Header</label>
        <referenceTo>Campaign_Report_Header__c</referenceTo>
        <relationshipLabel>Campaign Report Filters</relationshipLabel>
        <relationshipName>Campaign_Report_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Report Filters</relationshipLabel>
        <relationshipName>Campaign_Report_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Included_Or_Excluded__c</fullName>
        <label>Included Or Excluded</label>
        <picklist>
            <picklistValues>
                <fullName>Included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excluded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Campaign Report Filter</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Campaign Report Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Report Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>